avoids to hide the bell icon (and the drawer) on mobile

--- a/src/styles/notify/hub/admin-bar.scss
+++ b/src/styles/notify/hub/admin-bar.scss
@@ -5,6 +5,7 @@
 	padding-right: 8px;
 	position: relative;
 	z-index: 100002;
+	display: block; // avoids to hide the bell icon (and the drawer) on mobile
 
 	.notifications {
 
